--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,38 @@
   <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
+
+  <div class="calculator">
+    <input type="text">
+    <div class="calculator-row">
+      <button class="clear-button">AC</button>
+    </div>
+    <div class="calculator-row">
+      <button class="number-button">7</button>
+      <button class="number-button">8</button>
+      <button class="number-button">9</button>
+      <button class="operator-button">/</button>
+    </div>
+    <div class="calculator-row">
+      <button class="number-button">4</button>
+      <button class="number-button">5</button>
+      <button class="number-button">6</button>
+      <button class="operator-button">*</button>
+    </div>
+    <div class="calculator-row">
+      <button class="number-button">1</button>
+      <button class="number-button">2</button>
+      <button class="number-button">3</button>
+      <button class="operator-button">-</button>
+    </div>
+    <div class="calculator-row zero-row">
+      
+      <button class="number-button">.</button>
+      <button class="number-button zero">0</button>
+      <button class="operator-button">=</button>
+    </div>
+
+  </div>
   
 </body>
 <script src="calculator.js"></script>
