finish the project

--- a/calculator.html
+++ b/calculator.html
@@ -41,7 +41,7 @@
     </div>
     <div class="calculator-row zero-row">
       
-      <button class="number-button">.</button>
+      <button class="number-button" id="decimal_button">.</button>
       <button class="number-button" id="zero">0</button>
       <button class="equal-button">=</button>
     </div>
